# humanoid

./: CMakeLists.txt  basic.cc  data_registrar.cpp  data_registrar.h  virtual_model_control.h
config/: humanoid.cfg
model/: humanoid.xml
